--- a/policy.html
+++ b/policy.html
@@ -3,6 +3,7 @@
 <TITLE>ข้อกำหนด</TITLE>
 </HEAD>
 <BODY BGCOLOR=PINK>
+<font face="IrisUPC">
 <CENTER><H1>นโยบายความเป็นส่วนตัว</H1></CENTER>
 
 <BR> เนื้อหาดังต่อไปนี้อธิบายเกี่ยวกับวิธีการจัดการและใช้ข้อมูลส่วนตัวในการทำ Chatbot โดยเฉพาะ
@@ -17,5 +18,6 @@
 <BR> ดังนั้นรูปแบบที่เกิดขึ้นจะมาจาก API ที่เปิดให้บริการเท่านั้น
 <BR> ....................
 <BR>
+  </font>
 </BODY>
 </HTML>
